# contact-parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/contact_parser/: __init__.py  __main__.py  cli.py  config.py  constants.py  crawler.py  exceptions.py  extractors.py  models.py  output.py  parser.py  utils.py  validators.py
src/tests/: test_cli.py  test_cli_edge_cases.py  test_cli_integration.py  test_config.py  test_config_edge_cases.py  test_crawler_integration.py  test_extractors.py  test_lxml_parsing.py  test_main.py  test_model.py  test_output.py  test_parser_integration.py  test_utils_advanced.py  test_validators_country.py
